--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ a {
     padding: 8%;
 }
 
+.badge {
+    background-color: rgb(236, 1, 1);
+    position: absolute;
+    top: -10px;
+    left: -20px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -65,6 +72,7 @@ a {
     padding: 2%;
     margin: 2%;
 }
+
 input {
     width: 30px;
 }
